# trader_application

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  EA_MULTI_USER_AUTH_PLAN.md  LOCAL_AI_SETUP.md  OPERATIONS.md  PHASE_TRACKER.md  PRODUCT.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  README.md  compose.yaml  concept_provider.md  requirements.md  rule.md  start-app.ps1
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_order_dedupe_fingerprint.py  0003_mt5_runtime_config.py  0004_strategy_proposals.py  0005_trade_history.py  0006_closed_trade_review.py  0007_analysis_providers.py  0008_closed_trade_journal.py  0009_open_webui_provider.py  (+3 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_account_scope_idor.py  test_analysis_providers.py  test_analysis_runtime.py  test_app_smoke.py  test_approval_context.py  test_auth.py  test_backtest.py  test_donchian_signal.py  test_ea_socket_bridge.py  test_idempotency.py  test_market_candles.py  test_market_data.py  test_market_websocket.py  test_migrations.py  test_mt5_configuration.py  test_mt5_volatility_provider.py  test_official_us_news_provider.py  test_openai_provider.py  test_order_repository.py  test_order_service.py  test_provider_health.py  test_realized_risk_inputs.py  test_resilient_bridge.py  test_risk_engine.py  test_routed_news_provider.py  test_sizing.py  test_trade_history.py  test_trade_proposals.py  test_user_sessions.py  test_workflow_runner.py  test_workflow_scheduler.py
(+131 files in other folders)
